@@ -435,7 +435,8 @@ pedal = {
 This template demonstrates a string quartet.  It also uses a @code{\global}
 section for time and key signatures.
 
-@lilypond[quote,verbatim,raggedright]
+@ignore
+@li lypond[quote,verbatim,raggedright]
 version "2.4.0"
 
 global= {
@@ -481,7 +482,7 @@ Cello = \new Voice { \relative c' {
    \midi { \tempo 4=60}
 }
 @end lilypond
-
+@end ignore
 
 @subsection String quartet parts
 
