@@ -1,3 +1,12 @@
+2005-01-08  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* lily/pango-select.cc (symbol_to_pango_variant): init local variable.
+
+	* Documentation/user/examples.itely (String quartet): uncomment
+	broken example.
+
+	* lily/font-config.cc: new file.
+
 2005-01-08  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* scm/output-svg.scm: 
